<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="9dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgVwContact"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="0"
                app:srcCompat="@android:drawable/ic_menu_call"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="2dp"
                android:layout_marginRight="4dp">

                <TextView
                    android:textSize="14dp"
                    android:id="@+id/txtId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ID"
                    android:layout_weight="0"
                    android:layout_marginEnd="15dp" />
                <TextView
                    android:textSize="14dp"
                    android:id="@+id/txtNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_NAME"
                    android:layout_weight="1"
                    android:layout_marginEnd="15dp" />
                <TextView
                    android:textSize="14dp"
                    android:id="@+id/txtNumero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_PHONE"
                    android:layout_weight="1"
                    android:layout_marginEnd="15dp" />
                <TextView
                    android:textSize="14dp"
                    android:id="@+id/txtPropietario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_PROP"
                    android:layout_weight="1"
                    android:layout_marginEnd="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnModificar"
                    style="@style/Widget.VE.Button.Update"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:text="@string/btn_Update"
                    android:textSize="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="20dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEliminar"
                    style="@style/Widget.VE.Button.Delete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:text="@string/btn_Delete"
                    android:textSize="10dp"
                    android:layout_marginTop="20dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>